src/objects/Commission_Range__c.object
<CustomObject>
    <description>SObject to define Range data for Range Commissions</description>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Calculation Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interval_Id__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interval Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit_Maximum_Value__c</fullName>
        <label>Limit Maximum Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit_Minimum_Value__c</fullName>
        <label>Limit Minimum Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Limit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Amount_Iso_Code__c</fullName>
        <label>Maximum Amount Iso Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Amount_Iso_Code__c</fullName>
        <label>Minimum Amount Iso Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Commission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Commission</label>
        <referenceTo>Product_Commission__c</referenceTo>
        <relationshipLabel>Commissions Ranges</relationshipLabel>
        <relationshipName>Commissions_Ranges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Settled_Value_Amount__c</fullName>
        <label>Settled Value Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settled_Value_Iso_Code__c</fullName>
        <label>Settled Value Iso Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Settled_Value_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Settled Value Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Commission Range</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissions Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>